--- a/frontend/app/assets/css/main.css
+++ b/frontend/app/assets/css/main.css
@@ -1,2 +1,16 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
+
+.container {
+    margin: 0 auto;
+}
+
+:root {
+    --ui-radius: 0.75rem;
+    --ui-primary: var(--ui-color-primary-500);
+    --ui-secondary: var(--ui-color-secondary-500);
+    --ui-success: var(--ui-color-success-500);
+    --ui-info: var(--ui-color-info-500);
+    --ui-warning: var(--ui-color-warning-500);
+    --ui-error: var(--ui-color-error-500);
+}
